--- a/src/main/java/jdbc.properties
+++ b/src/main/java/jdbc.properties
@@ -1,4 +1,4 @@
-driver=
-url=http://mysql:3306/sasaledb
+driver=com.mysql.jdbc.Driver
+url=jdbc:mysql://127.0.0.1:3306/sasaledb
 username=root
 password=accp
