--- a/src/main/java/jdbc.properties
+++ b/src/main/java/jdbc.properties
@@ -1,4 +1,11 @@
-driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/sasaledb
-username=root
-password=accp
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/slsaledb
+jdbc.username=root
+jdbc.password=ACCP
+jdbc.initialPoolSize=20  
+jdbc.maxPoolSize=100  
+jdbc.minPoolSize=10  
+jdbc.maxIdleTime=600  
+jdbc.acquireIncrement=5  
+jdbc.maxStatements=5  
+jdbc.idleConnectionTestPeriod=60  
